--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 .building {
     display: flex;
     flex-direction: column-reverse; 
-    width: 500rem; 
+    width: 108rem; 
 }
 
 .floor {
@@ -22,7 +22,7 @@ body {
     padding: 20px; 
     margin: 15px 0; 
     width: 100%; 
-    height: 180px; 
+    height: 110px; 
     position: relative; 
 }
 
@@ -49,6 +49,18 @@ body {
     align-items: center; 
 }
 
+.empty-boxes {
+    display: flex;
+    gap: 10px;
+}
+
+.empty-box {
+    width: 120px;
+    height: 129px;
+    background-color: #ccc;
+    border: 1px solid #999;
+}
+
 button {
     padding: 10px;
     cursor: pointer;
@@ -58,8 +70,8 @@ button {
     display: flex;
     position: absolute;
     bottom: 0; 
-    left: 20px; 
-    gap: 20px; 
+    left: 200px; 
+    gap: 120px; 
 }
 
 .lift {
