--- a/styles.css
+++ b/styles.css
@@ -1,240 +1,235 @@
 * {
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto' , sans-serif;
+    
 }
 
-body {
+h1{
+    text-align: center;
+    font-weight:10px;
+    color:#e1e1ec;
+}
+
+body{
+    background-color:#1B2A40;
+}
+
+
+.floor-input,
+.lift-input {
+    margin: 5px;
+    font-size: 20px;
+    color: #e1e1ec;
+}
+
+.floor-input input,
+.lift-input input {
     background-color: #1B2A40;
-    margin-top: 2%;
-}
-
-.header {
-    font-size: 50px;
-    font-weight: 700;
-    margin-left: -20px;
-}
-
-.header__heading {
-    color: #515A6B;
-}
-
-.divider {
-    color: #515A6B;
-}
-
-#form {
-    background-color: #223850;
-    padding: 2rem;
-    margin: 2rem auto;
-    max-width: 600px;
-    max-height: 290px;
-    border-radius: 8px;
-    text-align: center;
-}
-
-#form label {
-    display: block;
-    color: #e1e1ec;
-    margin: 0.5rem 0;
-}
-
-#form input {
-    background-color: transparent;
-    border: 2px solid #e1e1ec;
-    border-radius: 4px;
-    padding: 0.5rem;
-    color: #ffffff;
-    font-size: 16px;
-    margin: 0.5rem 0;
-    width: calc(100% - 1rem);
-}
-
-#form button {
-    background-color: #314963;
-    color: #e1e1ec;
-    border: none;
-    border-radius: 8px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-top: 1rem;
-    transition: background-color 0.3s;
-}
-
-#form button:hover {
-    background-color: #515A6B;
-}
-
-.control {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 0 auto;
-    width: 100%;
-}
-
-.control__title {
-    color: #ffffff;
-    font-size: 24px;
-    font-family: "Fredoka One", sans-serif;
-}
-
-.control__form {
-    color: #e1e1ec;
-}
-
-.control--floor-input,
-.control--lift-input {
-    margin: 2rem 0;
-    width: 80%;
-}
-
-.control--floor-input input,
-.control--lift-input input {
-    background-color: transparent;
-    border: 4px solid #e1e1ec;
+    border:#ffffff;  
+    border: 1px solid #e1e1ec;
     border-radius: 8px;
     padding: 5px 10px;
-    color: #ffffff;
-    font-size: 24px;
-    font-weight: 700;
-    font-family: "Fredoka One", sans-serif;
-}
-
-.control--floor-input input {
-    color: #515A6B;
     font-size: 20px;
-    font-family: "Arial", sans-serif;
-}
-
-.control--lift-input input {
-    color: #515A6B;
-    font-size: 22px;
-    font-family: "Comic Sans MS", sans-serif;
-}
-
-.control__button {
-    background-color: #515A6B;
-    padding: 10px 20px;
-    margin: 10px;
-    border: none;
-    border-radius: 8px;
-    font-size: 20px;
+    font-family: sans-serif;
     color: #e1e1ec;
+}
+
+.button-floor{
+    justify-content: left;
+    align-items: flex-start;
+    background-color: #314963;
+    border: 1px #e1e1ec;
+    margin: 0px;
+    border-radius:4px;
+    font-size: 20px;
+    padding:5px 5px;
+    margin-bottom: 5px;
+    display: inline;
+    color: #e1e1ec;
+}
+
+.button-floor:hover {
+    transform:scale(1.1)
+}
+
+.generatebutton {
+    margin-bottom: 10px;
     outline: none;
     cursor: pointer;
-    transition: transform 250ms;
+    font-size: 20px;
+    padding: 15px 40px;
+    border-radius: 5px;
+    border: none;
+    background-color:#314963;
+    margin-right:auto;
+    color: #e1e1ec;
+    font-weight: 10px;
 }
 
-.control__button:hover {
+.generatebutton:hover {
     transform: scale(1.1);
 }
 
-.container {
-    background-color: #515A6B;
-    position: relative;
+.lifts {
+    width: 60px;
+    height: 100px;
+    background-color: #507092;
+    color: #314963;
+    font-size:0;
+    position: absolute;
+    left: 0;
+    top:0;
+    border: 2px solid;
+    align-items: center;
     border-radius: 8px;
-    padding: 15px;
+    content: none;
 }
 
-.control-btn {
-    font-size: 20px;
-    color: #e1e1ec;
-    margin: 15px;
-    padding: 15px;
-    border: none;
-    border-radius: 8px;
-    outline: none;
-    cursor: pointer;
-    transition: transform 250ms;
-    margin-top: 0.5px;
-}
-
-.control-btn:hover {
-    transform: scale(1.1);
-}
-
-.control-btn--up {
-    background-color: #223850;
-    margin-left: 7rem;
-}
-
-.control-btn--down {
-    background-color: #223850;
-    margin-left: 7rem;
-}
-
-.arrow-icon {
-    margin: 5px 2px 2px;
-    width: 10px;
-    height: 10px;
+.lifts p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-0%, -0%);
 }
 
 .floor {
-    height: 35%;
+    height: 100px;
     position: relative;
-}
-
-.floor__number {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 5px;
     color: #e1e1ec;
-    padding: 20px 15px;
-    border-radius: 50%;
-    font-size: 20px;
-    font-weight: 700;
+    border-bottom: #e1e1ec 0.5px solid;
+}
+
+.liftMotion{
+    transition-duration: 2s;
+}
+
+.lifts .gate {
     position: absolute;
-    left: 0rem;
-    top: 30%;
-    float: right;
-    margin-bottom: 1rem;
-}
-
-.hr {
-    background-color: #fffefe;
-    height: 1px;
-    margin: 0;
-}
-
-.lift {
-    display: block;
     height: 100%;
-    width: 100px;
-    position: absolute;
-    left: 15%;
-    bottom: 1%;
-    background-color: #c7d1e2;
-    overflow: hidden;
-    border-radius: 8px;
-    border-color: #e1e1ec;
+    width: 80%;
+    border-radius: 2px;
+    background-color: #314963;
 }
 
-.lift__door {
-    background-color: #475B6A;
-    width: 50%;
-    height: 100%;
-    position: relative;
-    z-index: 2;
+.gateLeft {
+    left: 0;
 }
 
-.lift__door-left {
-    float: left;
+.gateRight {
+    right: 0;
 }
 
-.lift__door-right {
-    float: right;
+.animateLiftsDoorsOnFloorStop  {
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-name: doorSimulation;
 }
 
-@media (max-width: 768px) {
-    .header__heading {
-        font-size: 32px;
+@keyframes doorSimulation {
+    from {
+        width: 50%;
     }
-
-    .floor__number {
-        right: 10px;
+    50% {
+        width: 0%;
     }
-
-    .control-btn {
-        font-size: 20px;
+    to {
+        width: 50%;
     }
 }
+/* For mobile */
+@media screen and (max-width: 480px) {
+    .lifts {
+        width: 40px;
+        height: 50px;
+        background-color: #314963;
+        color: #507092;
+        font-size:0.5px;
+        position: absolute;
+        left: -10px;
+        margin-left:-14px;
+        margin-right:-4px;
+        top:0;
+        border: 1px solid;
+        align-items: center;
+        border-radius: 2.5px;
+        content: none;
+        bottom:0;
+        margin-top:50px;
+  }
+    
+    .lifts p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-0%, -0%);
+  }
+    
+    .floor {
+      height: 100px;  
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      background-color: #1B2A40;
+      padding: 2.5px;
+      border-bottom: #e1e1ec 0.5px solid;
+  }
+    
+    .lifts .gate {
+        position: absolute;
+        height: 100%;
+        width: 50%;
+        border-radius: 8px;
+        background-color: #314963;
+  }
+
+}
+
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .lifts {
+        width: 45px;
+        height: 50px;
+        background-color: #314963;
+        color: #507092;
+        font-size:0.5px;
+        position: absolute;
+        left: 0; 
+        border: 1px solid;
+        align-items: center;
+        border-radius: 2.5px;
+        content: none;
+        bottom:0;
+        margin-top:50px;
+}
+  
+  .lifts p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-0%, -0%);
+}
+    
+  .floor {
+      height: 100px;  
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      background-color: #1B2A40;
+      padding: 2.5px;
+      border-bottom: #e1e1ec 0.5px solid;
+  }
+    
+ .lifts .gate {
+        position: absolute;
+        height: 100%;  
+        width: 50%;
+        background-color: #507092;
+}
+  
+}    
