--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,33 @@ body {
     color: #e1e1ec;
 }
 
+/* Add space between the Up and Down buttons */
+.lift-btn-container input[type="button"] {
+    margin: 4px 0; /* Adds space above and below the buttons */
+}
+
+/* Add margin to the left of the Up button */
+.lift-btn-container input[value='▲'] {
+    margin-left: 29px; /* Adjust this value as needed */
+}
+
+/* Add margin to the left and bottom of the Down button */
+.lift-btn-container input[value='▼'] {
+    margin-left: 29px; /* Adjust this value as needed */
+    margin-bottom: -4rem; /* Adjust this value to control the space below */
+}
+
+/* Add margin to the top of both buttons */
+.lift-btn-container input[type="button"] {
+    margin-top: 8px; /* Adjust this value to control the space from the top */
+}
+
+/* Add space between the Up and Down buttons */
+.lift-btn-container input:first-child {
+    margin-right: 10px; /* Adds space between the Up and Down buttons */
+}
+
+
 .button-floor:hover {
     transform: scale(1.1);
 }
@@ -187,6 +214,7 @@ body {
     align-items: center;
     border-radius: 8px;
     content: none;
+    margin-top: 2rem;
 }
 
 .lifts p {
@@ -528,16 +556,18 @@ input:first-of-type + input {
     }
 
     .lift-container {
-        margin-left: 0;
+        margin-left: 90px;
     }
 
     .lifts {
         width: 25px;
         height: 30px;
+        padding: 2px;
     }
 
     .generatebutton {
         font-size: 20px;
         padding: 2px 6px;
     }
+    
 }
